<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/top_margin"
    android:scrollbars="none"
    tools:context="com.avengers.android.avengerstest.Questions">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/q1"
                android:fontFamily="@font/spacemonobold"
                android:textSize="@dimen/smallText" />

            <ImageView
                android:layout_width="match_parent"
                android:contentDescription="@string/avengers_pic"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/top_margin"
                android:adjustViewBounds="true"
                android:src="@drawable/mural2" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/top_margin">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q1A" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q1B" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q1C" />

                <RadioButton
                    android:id="@+id/q1D"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q1D" />

            </RadioGroup>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q2"
                android:textAlignment="center"
                android:layout_marginTop="@dimen/top_margin"
                android:fontFamily="@font/spacemonobold"
                android:textSize="@dimen/smallText" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/avengers_pic_2"
                android:layout_marginTop="@dimen/top_margin"
                android:adjustViewBounds="true"
                android:src="@drawable/spidey" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/top_margin">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q2A" />

                <RadioButton
                    android:id="@+id/q2B"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q2B" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q2C" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q2D" />

            </RadioGroup>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q3"
                android:textAlignment="center"
                android:layout_marginTop="@dimen/top_margin"
                android:fontFamily="@font/spacemonobold"
                android:textSize="@dimen/smallText" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/top_margin"
                android:adjustViewBounds="true"
                android:contentDescription="@string/avengers_pic_3"
                android:src="@drawable/avenvsjust" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="@dimen/top_margin">

                <CheckBox
                    android:id="@+id/q3A"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:text="@string/q3A" />

                <CheckBox
                    android:id="@+id/q3B"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/q3D"
                    android:layout_alignParentTop="true"
                    android:text="@string/q3B" />

                <CheckBox
                    android:id="@+id/q3C"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@+id/q3A"
                    android:text="@string/q3C" />

                <CheckBox
                    android:id="@+id/q3D"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_below="@+id/q3B"
                    android:text="@string/q3D" />

            </RelativeLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q4"
                android:textAlignment="center"
                android:fontFamily="@font/spacemonobold"
                android:layout_marginTop="@dimen/top_margin"
                android:textSize="@dimen/smallText" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/top_margin"
                android:adjustViewBounds="true"
                android:contentDescription="@string/captain_america"
                android:src="@drawable/captain"/>

            <EditText
                android:id="@+id/q4A"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/top_margin"
                android:hint="@string/q4Hint"
                android:imeOptions="actionDone"
                android:inputType="textCapWords" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q5"
                android:textAlignment="center"
                android:fontFamily="@font/spacemonobold"
                android:layout_marginTop="@dimen/top_margin"
                android:textSize="@dimen/smallText" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/top_margin"
                android:adjustViewBounds="true"
                android:contentDescription="@string/black_panther_and_blade"
                android:src="@drawable/pantherandblade" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/top_margin">

                <RadioButton
                    android:id="@+id/q5A"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q5A" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q5B" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q5C" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q5D" />

            </RadioGroup>

        </LinearLayout>


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/top_margin"
            android:onClick="calculateScore"
            android:text="@string/Submit" />

    </LinearLayout>


</ScrollView>
