<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.avengers.android.avengerstest.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            style="@style/TitleText"
            android:layout_marginTop="40sp"
            android:textAlignment="center"
            android:fontFamily="@font/avengers"
            android:text="@string/apptext" />

    <TextView
        android:text="@string/enter_your_name"
        android:fontFamily="@font/spacemonobold"

        style="@style/StartText"/>

    <EditText
        android:id="@+id/playerName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/top_margin"
        android:inputType="textCapWords"
        android:imeOptions="actionDone"/>

        <Button
            style="@style/StartText"
            android:background="@drawable/button_selector"
            android:onClick="startGame"
            android:text="@string/start" />

    </LinearLayout>

</ScrollView>
